# TC4

./: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  conanbuild.sh  conanbuildenv-release-x86_64.sh  conanfile.txt  conanrun.sh  conanrunenv-release-x86_64.sh  deactivate_conanbuild.sh  deactivate_conanrun.sh  nlohmann_json-config.cmake  test.cpp
